name:                  ncsa-logparse
version:               0.1.0.0
synopsis:              An NCSA logparser written in Haskell
-- description:
homepage:              https://github.com/safarijv/ncsa-logparse
license:               BSD3
license-file:          LICENSE
author:                Safari Books Online
maintainer:            jstevenson@safaribooksonline.com
-- copyright:
category:              System
build-type:            Simple
-- extra-source-files:
cabal-version:         >=1.10

Test-Suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests src
  main-is:             QC.hs
  other-modules:       QC.HTTP
  ghc-options:         -Wall
                       -O2
                       -fno-warn-unused-do-bind
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.7 && <4.8,
                       containers >= 0.5.5.1,
                       bytestring,
                       time >= 1.4.2,
                       attoparsec >= 0.13.0.0,
                       optparse-applicative >= 0.11.0.2,
                       ua-parser >= 0.5,
                       old-locale >= 1.0.0.6,
                       strptime >= 1.0.10,
                       QuickCheck >= 2.7,
                       quickcheck-unicode,
                       directory >= 1.2.3.0,
                       split >= 0.2.2,
                       text >= 1.2.1.1,
                       stream-fusion >= 0.1.2.5,                       
                       scientific,
                       test-framework >= 0.8.0.2,
                       test-framework-quickcheck2 >= 0.3.0.3
  default-language:    Haskell2010

executable ncsa-logparse
  main-is:             Main.hs
  ghc-options:         -Wall
                       -O2
                       -threaded
                       -fno-warn-unused-do-bind
                       -fforce-recomp
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.7 && <4.8,
                       containers >= 0.5.5.1,
                       bytestring,
                       time >= 1.4.2,
                       attoparsec >= 0.13.0.0,
                       optparse-applicative >= 0.11.0.2,
                       ua-parser >= 0.5,
                       old-locale >= 1.0.0.6,
                       strptime >= 1.0.10,
                       QuickCheck >= 2.7,
                       text-format-simple >= 1.1.0,
                       directory >= 1.2.3.0,
                       split >= 0.2.2,
                       text >= 1.2.1.1,
                       stream-fusion >= 0.1.2.5,
                       deepseq >= 1.3.0.2,
                       deepseq-generics >= 0.1.1.2,
                       cassava >= 0.4.4.0,
                       parallel >= 3.2.0.6
  hs-source-dirs:      src
  default-language:    Haskell2010